commit schermata login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,12 @@
             android:name=".HomepageActivity"
             android:exported="true"
             >
+        </activity>
 
-
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            >
         </activity>
 
 
