--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,7 @@
         android:theme="@style/Theme.Readify"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            >
-        </activity>
-        <activity
-            android:name=".StartupActivity"
+            android:name=".ui.startup.StartupActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,13 +22,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomepageActivity"
+            android:name=".ui.main.HomepageActivity"
             android:exported="true"
             >
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
             >
         </activity>
