--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.startup.WelcomeActivity"
             android:exported="true"
             >
         </activity>
 
         <activity
             android:name=".ui.main.HomeActivity"
-            android:exported="false"
+            android:exported="true"
             >
             <meta-data
                 android:name="android.app.lib_name"
